--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Nomina</title>
+    <title>WebPayRoll - 0.1</title>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+<link rel="shortcut icon" href="assets/favicon.png">
     <%= csrf_meta_tags %>
   </head>
   <body>
@@ -40,40 +41,8 @@
     </div>
   </body>
   <script>
-    function se() {
-      var v = $("#persona_contrato_attributes_tipo_de_contrato").val();
-
-      switch (v) {
-        case '0':
-          {
-
-            $("#persona_contrato_attributes_fecha_fin").attr('disabled', true);
-            $("#persona_contrato_attributes_sueldo_externo").attr('disabled', true);
-            $("#persona_contrato_attributes_fecha_fin").val("");
-            $("#persona_contrato_attributes_sueldo_externo").val("");
-          };
-          break;
-        case '1':
-          {
-
-            $("#persona_contrato_attributes_fecha_fin").attr('disabled', false);
-            $("#persona_contrato_attributes_sueldo_externo").attr('disabled', true);
-            $("#persona_contrato_attributes_sueldo_externo").val("");
-          };
-          break;
-        case '2':
-          {
-
-            $("#persona_contrato_attributes_fecha_fin").attr('disabled', true);
-            $("#persona_contrato_attributes_sueldo_externo").attr('disabled', false);
-            $("#persona_contrato_attributes_fecha_fin").val("");
-
-          };
-          break;
-      }
-    }
     $(function () {
-      se()
+
       $('#main-menu').metisMenu();
 
       var $this = $('#main-menu'),
@@ -91,7 +60,7 @@
         resizeTimer = setTimeout(self.initCollapse($this), 250);
       });
 
-      $('#persona_contrato_attributes_tipo_de_contrato').change(se);
+
     });
   </script>
 </html>
