--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <div class="page-header">
-  <h2>Admin Dashboard</h2>
-  <h5>Welcome Jhon Deo , Love to see you back.</h5>
+  <h2>Pantalla inicial</h2><small>Bienvenido <%= current_usuario.email%></small>
+
 </div>
 
 <div class="row text-center">
