--- a/app/views/conceptospersonales/index.html.erb
+++ b/app/views/conceptospersonales/index.html.erb
@@ -1,82 +1,78 @@
 <div class="page-header">
-  <div class="pull-right">
-    <%= link_to "Nuevo Concepto personal", new_conceptopersonal_path, class: "btn btn-danger"  %>
-  </div>
-  <h1>Conceptos Personales</h1>
+    <%= render 'layouts/nuevo', :msg => "Nuevo Concepto Personal", :path=>new_conceptopersonal_path,:x=>@conceptospersonales %>
+
+    <h1>Conceptos Personales</h1>
 </div>
 <div class="panel panel-success">
-  <div class="panel-heading">
-    Asignaciones
-  </div>
-  <%if Conceptopersonal.all.where(tipo_de_concepto:0).length>0%>
-  <div class="panel-body">
-    <div class="table-responsive">
-      <table class="table table-bordered table-condensed table-responsive table-bordered">
-        <thead>
-          <tr>
-            <th>Nombre</th>
-            <th class= "actions" style= "width: 100px;">Acciones</th>
-          </tr>
-        </thead>
+    <div class="panel-heading">
+        Asignaciones
+    </div>
+    <%if Conceptopersonal.all.where(tipo_de_concepto:0).length>0%>
+    <div class="panel-body">
+        <div class="table-responsive">
+            <table class="table table-bordered table-condensed table-responsive table-bordered">
+                <thead>
+                    <tr>
+                        <th>Nombre</th>
+                        <th class="actions" style="width: 100px;">Acciones</th>
+                    </tr>
+                </thead>
 
-        <tbody>
-          <%
+                <tbody>
+                    <%
           asignaciones=@conceptospersonales.where(tipo_de_concepto: 0).order("created_at")
           asignaciones.each do |conceptopersonal| %>
-          <tr>
-            <td><%= conceptopersonal.nombre %></td>
-            <td class= 'actions'>  <div class="btn-group btn-group-xs form-inline" role="group" aria-label="...">
+                    <tr>
+                        <td><%= conceptopersonal.nombre %></td>
+                        <td class='actions'>
+                            <%= render 'layouts/actions', :x => conceptopersonal, :y => edit_concepto_path(conceptopersonal) %>
 
-            <%= link_to '', conceptopersonal,class: "btn btn-default fa fa-eye " %>
-              <%= link_to '', edit_conceptopersonal_path(conceptopersonal),class: "btn btn-default fa fa-pencil" %>
-              <%= link_to '', conceptopersonal,class: "btn btn-danger fa fa-trash", method: :delete, data: { confirm: 'Esta seguro?' } %></div></td>
-          </tr>
-          <% end %>
-        </tbody>
-      </table>
+                        </td>
+                    </tr>
+                    <% end %>
+                </tbody>
+            </table>
+        </div>
     </div>
-  </div>
-  <%elsif%>
-  <div class="actions">
-    <h4>"No hay asignaciones disponibles"</h4>
-  </div>
-  <%end%>
+    <%else%>
+    <div class="actions">
+        <h4>"No hay asignaciones disponibles"</h4>
+    </div>
+    <%end%>
 </div>
 <div class="panel panel-danger">
-  <div class="panel-heading">
-    Deducciones
-  </div>
-  <%if Conceptopersonal.all.where(tipo_de_concepto:1).length>0%>
-  <div class="panel-body">
-    <div class="table-responsive">
-      <table class="table table-bordered table-condensed table-responsive table-bordered">
-        <thead>
-          <tr>
-            <th>Nombre</th>
-            <th>Acciones</th>
-          </tr>
-        </thead>
+    <div class="panel-heading">
+        Deducciones
+    </div>
+    <%if Conceptopersonal.all.where(tipo_de_concepto:1).length>0%>
+    <div class="panel-body">
+        <div class="table-responsive">
+            <table class="table table-bordered table-condensed table-responsive table-bordered">
+                <thead>
+                    <tr>
+                        <th>Nombre</th>
+                        <th>Acciones</th>
+                    </tr>
+                </thead>
 
-        <tbody>
-          <%
+                <tbody>
+                    <%
   deducciones=@conceptospersonales.where(tipo_de_concepto: 1).order("created_at")
             deducciones.each do |conceptopersonal| %>
-          <tr>
-            <td><%= conceptopersonal.nombre %></td>
-            <td class= 'actions'>  <div class="btn-group btn-group-xs form-inline" role="group" aria-label="...">
-
-            <%= link_to '', conceptopersonal,class: "btn btn-default fa fa-eye " %>
-              <%= link_to '', edit_conceptopersonal_path(conceptopersonal),class: "btn btn-default fa fa-pencil" %>
-              <%= link_to '', conceptopersonal,class: "btn btn-danger fa fa-trash", method: :delete, data: { confirm: 'Esta seguro?' } %></div></td>
-          </tr>
-          <% end %>
-        </tbody>
-      </table>
+                    <tr>
+                        <td><%= conceptopersonal.nombre %></td>
+                        <td class='actions'>
+                            <%= render 'layouts/actions', :x => conceptopersonal, :y => edit_concepto_path(conceptopersonal) %>
+                        </td>
+                    </tr>
+                    <% end %>
+                </tbody>
+            </table>
+        </div>
     </div>
-  </div>
-  <%elsif%>
-  <div class="actions">
-    <h4>"No hay asignaciones disponibles"</h4>
-  </div>
-  <%end%>
+    <%else%>
+    <div class="actions">
+        <h4>"No hay asignaciones disponibles"</h4>
+    </div>
+    <%end%>
 </div>
