--- a/app/views/dependencias/index.html.erb
+++ b/app/views/dependencias/index.html.erb
@@ -1,42 +1,39 @@
 <div class="page-header">
-  <div class="pull-right">
-    <%= link_to 'Nueva Dependencia', new_dependencia_path, class:"btn btn-danger btn-md" %>
-  </div>
-  <h1>Dependencias</h1>
+  <%= render 'layouts/nuevo', :msg => "Nuevo dependencia", :path=>new_dependencia_path ,:x =>@dependencias %>
+
+    <h1>Dependencias</h1>
 </div>
 <ul class="list-group">
-  <li class="list-group-item text-muted" contenteditable="false">Lista de dependencias</li>
-  <%if Dependencia.all.length>0%>
-  <li class="list-group-item text-center ">
-    <div class="table-responsive">
-      <table class="table table-hover table-bordered table-condensed table-striped">
-        <thead>
-          <tr>
-            <th>Nombre</th>
-            <th class= "actions" style= "width: 100px;">Acciones</th>
-          </tr>
+    <li class="list-group-item text-muted" contenteditable="false">Lista de dependencias</li>
+    <%if Dependencia.all.length>0%>
+    <li class="list-group-item text-center ">
+        <div class="table-responsive">
+            <table class="table table-hover table-bordered table-condensed table-striped">
+                <thead>
+                    <tr>
+                        <th>Nombre</th>
+                        <th class="actions" style="width: 100px;">Acciones</th>
+                    </tr>
 
-        </thead>
+                </thead>
 
-        <tbody>
+                <tbody>
 
-          <% @dependencias.each do |dependencia| %>
-          <tr>
-            <td><%= dependencia.nombre %></td>
-            <td class= "actions"><div class="btn-group btn-group-xs form-inline" role="group" aria-label="...">
-
-          <%= link_to '', dependencia,class: "btn btn-default fa fa-eye " %>
-            <%= link_to '', edit_dependencia_path(dependencia),class: "btn btn-default fa fa-pencil" %>
-            <%= link_to '', dependencia,class: "btn btn-danger fa fa-trash", method: :delete, data: { confirm: 'Esta seguro?' } %></div></td>
-          </tr>
-          <% end %>
-        </tbody>
-      </table>
+                    <% @dependencias.each do |dependencia| %>
+                    <tr>
+                        <td><%= dependencia.nombre %></td>
+                        <td class="actions">
+                            <%= render 'layouts/actions', :x => dependencia, :y => edit_dependencia_path(dependencia) %>
+                        </td>
+                    </tr>
+                    <% end %>
+                </tbody>
+            </table>
+        </div>
+    </li>
+    <%else%>
+    <div class="actions">
+        <h4>"No hay dependencias disponibles"</h4>
     </div>
-  </li>
-  <%elsif%>
-  <div class="actions">
-    <h4>"No hay dependencias disponibles"</h4>
-  </div>
-  <%end%>
+    <%end%>
 </ul>
