--- a/app/views/personas/_datos.html.erb
+++ b/app/views/personas/_datos.html.erb
@@ -5,7 +5,7 @@
     </div>
     <div class="panel-body">
         <div class="col-xs-6 form-group">
-            <%= f.label "Cedula" %><br>
+            <%= f.label "Cédula" %><br>
             <div class="form-group input-group">
 
                 <span class="input-group-addon">
@@ -47,7 +47,7 @@
             </div>
         </div>
         <div class="col-xs-6">
-            <%= f.label :telefono_fijo %>
+            <%= f.label "Teléfono fijo" %>
             <div class="form-group input-group">
                 <span class="input-group-addon">
                     <span class="fa fa-phone"></span>
@@ -56,7 +56,7 @@
             </div>
         </div>
         <div class="col-xs-6">
-            <%= f.label :telefono_movil %>
+            <%= f.label "Teléfono móvil" %>
             <div class="form-group input-group">
                 <span class="input-group-addon">
                     <span class="fa fa-mobile"></span>
@@ -111,7 +111,7 @@
             </div>
         </div>
         <div class="col-lg-6">
-            <%= f.label :direccion %>
+            <%= f.label "Dirección" %>
             <div class="form-group input-group">
                 <span class="input-group-addon">
                     <span class="fa fa-home"></span>
