--- a/app/views/personas/_personas.html.erb
+++ b/app/views/personas/_personas.html.erb
@@ -5,11 +5,11 @@
   <table class="table table-hover table-condensed table-striped" style="font-size:	11px;">
     <thead>
       <tr>
-        <th>Cedula</th>
+        <th>Cédula</th>
         <th>Nombres Completo</th>
         <th>Departamento</th>
         <th>Cargo</th>
-        <th>Nomina</th>
+        <th>Nómina</th>
         <th>Sueldo</th>
         <th class="actions" style="width: 200px;">Reporte</th>
 
