--- a/app/views/personas/_registroconcepto_fields.html.erb
+++ b/app/views/personas/_registroconcepto_fields.html.erb
@@ -23,7 +23,7 @@
       </div>
     </div>
     <div class="col-sm-4">
-      <%= f.label :formula %>
+      <%= f.label "Fórmula" %>
       <div class="form-group input-group">
         <span class="input-group-addon">
           <span class="fa fa-calculator"></span>
@@ -32,7 +32,7 @@
       </div>
     </div>
     <div class="col-sm-4">
-      <%= f.label :formula_patrono %>
+      <%= f.label "Fórmula patrono" %>
       <div class="form-group input-group">
         <span class="input-group-addon">
           <span class="fa fa-calculator"></span>
