--- a/app/views/personas/show.html.erb
+++ b/app/views/personas/show.html.erb
@@ -94,12 +94,12 @@
       <%= @persona.cargo.sueldos.last.sueldo_integral%></li>
   <li class="list-group-item text-right">
     <span class="pull-left">
-      <strong class="">Cedula</strong>
+      <strong class="">Cédula</strong>
     </span>
     <%= $dic["tipos_de_cedula"].key(@persona.tipo_de_cedula).to_s+@persona.cedula %></li>
   <li class="list-group-item text-right">
     <span class="pull-left">
-      <strong class="">Telefonos</strong>
+      <strong class="">Teléfonos</strong>
     </span><%= @persona.telefono_fijo %><br>
     <%= @persona.telefono_movil %></li>
 </li>
