--- a/app/views/tipos/index.html.erb
+++ b/app/views/tipos/index.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-    <%= render 'layouts/nuevo', :msg => "Nueva Nomina", :path=>new_tipo_path, :x =>@tipos %>
+    <%= render 'layouts/nuevo', :msg => "Nueva Nómina", :path=>new_tipo_path, :x =>@tipos %>
 
     <h1>Tipos de Nómina</h1>
 </div>
@@ -113,7 +113,7 @@ alert("Error al enviar correos.")
   if ($('.'+this.id).length>0) {
                 $('#enviar').modal({backdrop: false});
                 s(0,this.id);
-}else{alert("no existen empleados en la nomina");}
+}else{alert("no existen empleados en la nómina");}
             });
 
         })
