--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -33,7 +33,7 @@
       </span>
       <div class="text-box">
         <p class="main-text"><%= Tipo.all.length%></p>
-        <p class="text-muted">Nominas</p>
+        <p class="text-muted">Nóminas</p>
       </div>
     </div>
   </div>
