--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,111 +1,109 @@
 <div id="posicionmenu">
-    <nav class="navbar navbar-default navbar-cls-top " role="navigation" style="margin-bottom: 0">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".sidebar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
+  <nav class="navbar navbar-default navbar-cls-top " role="navigation" style="margin-bottom: 0">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".sidebar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
 
+      <a class="navbar-brand" href="/"><img alt="Brand" src="/assets/brand.png"></a>
 
-
-            <a class="navbar-brand" href="/"><img alt="Brand" src="/assets/brand.png"></a>
-
-        </div>
-        <div style="color: white;
+    </div>
+    <div style="color: white;
       padding: 15px 50px 5px 50px;
       float: right;
       font-size: 16px;">
 
-            <%= $dic["quincena"].key($quincena)+'('+$ahora.strftime("%d-#{$dic["meses"].key($ahora.month)}-%Y")+') '%>
+      <%= $dic["quincena"].key($quincena)+'('+$ahora.strftime("%d-#{$dic["meses"].key($ahora.month)}-%Y")+') '%>
 
-            <%if usuario_signed_in?%>
+      <%if usuario_signed_in?%>
 
-            <%= link_to "Cerrar sesion", destroy_usuario_session_path,method: :delete, class:"btn btn-danger"%>
+      <%= link_to "Cerrar sesion", destroy_usuario_session_path,method: :delete, class:"btn btn-danger"%>
 
-            <%else %>
-            <%=
+      <%else %>
+      <%=
     link_to "Iniciar sesion", new_usuario_session_path, class:"btn btn-danger"
     %>
-            <%end %>
-        </div>
-    </nav>
+      <%end %>
+    </div>
+  </nav>
 
-    <!-- /. NAV TOP  -->
-    <nav class="navbar-default navbar-side" role="navigation">
-        <div class="sidebar-collapse">
-            <ul class="nav" id="main-menu">
+  <!-- /. NAV TOP  -->
+  <nav class="navbar-default navbar-side" role="navigation">
+    <div class="sidebar-collapse">
+      <ul class="nav" id="main-menu">
 
-                <%if usuario_signed_in?%>
-                <li class="">
-                    <a href="#">
+        <%if usuario_signed_in?%>
+        <li class="">
+          <a href="#">
 
-                        <span class="label label-success">
-                            <i class="fa fa-dot-circle-o "></i>
+            <span class="label label-success">
+              <i class="fa fa-dot-circle-o "></i>
 
-                            <%=current_usuario.rol.nombre%></span>
-                            <span class="pull-right">  <%=current_usuario.email%></span>
-                      </a>
-                </li>
+              <%=current_usuario.rol.nombre%></span>
+            <span class="pull-right">
+              <%=current_usuario.email%></span>
+          </a>
+        </li>
 
-                <li>
-                    <%= link_to raw("<i class=\"fa fa-home fa-2x\"></i> PANEL INICIAL"), welcome_index_path%>
-                </li>
-                <li>
-                    <a href="#">
-                        <i class="fa fa-building fa-2x"></i>
-                        ESTRUCTURAS<span class="fa arrow"></span>
-                    </a>
-                    <ul class="nav nav-second-level">
-                        <li>
-                            <%= link_to "Dependencias", dependencias_path%>
-                        </li>
-                        <li>
-                            <%= link_to "Departamentos", departamentos_path%>
-                        </li>
+        <li>
+          <%= link_to raw("<i class=\"fa fa-home fa-2x\"></i> PANEL INICIAL"), welcome_index_path%>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fa fa-building fa-2x"></i>
+            ESTRUCTURAS<span class="fa arrow"></span>
+          </a>
+          <ul class="nav nav-second-level">
+            <li>
+              <%= link_to "Dependencias", dependencias_path%>
+            </li>
+            <li>
+              <%= link_to "Departamentos", departamentos_path%>
+            </li>
 
-                    </ul>
-                </li>
-                <li>
-                    <%= link_to raw("<i class=\"fa fa-money fa-2x\"></i> NOMINAS"), tipos_path%>
-                </li>
-                <li>
-                    <a href="#">
-                        <i class="fa fa-th-list fa-2x"></i>
-                        CONCEPTOS<span class="fa arrow"></span>
-                    </a>
-                    <ul class="nav nav-second-level">
-                        <li>
-                            <%= link_to "Globales", conceptos_path%>
-                        </li>
-                        <li>
-                            <%= link_to "Personales", conceptospersonales_path%>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                <li>
-                    <%= link_to raw("<i class=\"fa fa-briefcase fa-2x\"></i> CARGOS"), cargos_path%>
-                </li>
-                <li >
-                    <%= link_to raw("<i class=\"fa fa-users fa-2x\"></i> EMPLEADOS"), personas_path%>
-                </li>
-                <li>
-                    <%= link_to raw("<i class=\"fa fa-eye fa-2x\"></i> REGISTROS"), registros_path%>
-                </li>
-                <li>
-                    <%= link_to raw("<i class=\"fa fa-cog fa-2x\"></i> CONFIGURACION"), settings_path%>
-                </li>
-                <li>
-                    <%= link_to raw("<i class=\"fa fa-info-circle fa-2x\"></i> ACERCA DE..."), cargos_path%>
-                </li>
+          </ul>
+        </li>
+        <li>
+          <%= link_to raw("<i class=\"fa fa-money fa-2x\"></i> NÓMINAS"), tipos_path%>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fa fa-th-list fa-2x"></i>
+            CONCEPTOS<span class="fa arrow"></span>
+          </a>
+          <ul class="nav nav-second-level">
+            <li>
+              <%= link_to "Globales", conceptos_path%>
+            </li>
+            <li>
+              <%= link_to "Personales", conceptospersonales_path%>
+            </li>
+          </ul>
+        </li>
+        <li>
+        <li>
+          <%= link_to raw("<i class=\"fa fa-briefcase fa-2x\"></i> CARGOS"), cargos_path%>
+        </li>
+        <li >
+          <%= link_to raw("<i class=\"fa fa-users fa-2x\"></i> EMPLEADOS"), personas_path%>
+        </li>
+        <li>
+          <%= link_to raw("<i class=\"fa fa-eye fa-2x\"></i> REGISTROS"), registros_path%>
+        </li>
+        <li>
+          <%= link_to raw("<i class=\"fa fa-cog fa-2x\"></i> CONFIGURACION"), settings_path%>
+        </li>
+        <li>
+          <%= link_to raw("<i class=\"fa fa-info-circle fa-2x\"></i> ACERCA DE..."), cargos_path%>
+        </li>
 
+        <%end %>
+      </ul>
 
-                <%end %>
-            </ul>
+    </div>
 
-        </div>
-
-    </nav>
+  </nav>
 </div>
