--- a/app/views/personas/_familiar_fields.html.erb
+++ b/app/views/personas/_familiar_fields.html.erb
@@ -5,7 +5,7 @@
   </div>
   <div class="panel-body">
     <div class="col-sm-4">
-      <%= f.label :cedula %>
+      <%= f.label "Cédula" %>
       <div class="form-group input-group">
         <span class="input-group-addon">
           <span class="fa fa-user"></span>
@@ -50,7 +50,7 @@
       </div>
     </div>
     <div class="col-sm-4">
-      <%= f.label :direccion %>
+      <%= f.label "Dirección" %>
       <div class="form-group input-group">
         <span class="input-group-addon">
           <span class="fa fa-home"></span>
