--- a/app/views/personas/_form.html.erb
+++ b/app/views/personas/_form.html.erb
@@ -68,8 +68,42 @@
 </div>
   <%= render 'layouts/botones', p: personas_path  %>
 <% end %>
-<script type="text/javascript">
-$(function () {
-  $('[data-toggle="popover"]').popover();
-});
+<script>
+  function se() {
+    var v = $("#persona_contrato_attributes_tipo_de_contrato").val();
+
+    switch (v) {
+      case '0':
+        {
+
+          $("#persona_contrato_attributes_fecha_fin").attr('disabled', true);
+          $("#persona_contrato_attributes_sueldo_externo").attr('disabled', true);
+          $("#persona_contrato_attributes_fecha_fin").val("");
+          $("#persona_contrato_attributes_sueldo_externo").val("");
+        };
+        break;
+      case '1':
+        {
+
+          $("#persona_contrato_attributes_fecha_fin").attr('disabled', false);
+          $("#persona_contrato_attributes_sueldo_externo").attr('disabled', true);
+          $("#persona_contrato_attributes_sueldo_externo").val("");
+        };
+        break;
+      case '2':
+        {
+
+          $("#persona_contrato_attributes_fecha_fin").attr('disabled', true);
+          $("#persona_contrato_attributes_sueldo_externo").attr('disabled', false);
+          $("#persona_contrato_attributes_fecha_fin").val("");
+
+        };
+        break;
+    }
+  }
+  $(function () {
+    se()
+$('[data-toggle="popover"]').popover();
+    $('#persona_contrato_attributes_tipo_de_contrato').change(se);
+  });
 </script>
